--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
           <li><a href="index.html">Portfolio</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="about.html" class="selected">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.php">Contact</a></li>
         </ul>
       </nav>
     </header>
