--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="index.html" class="selected">Portfolio</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.php">Contact</a></li>
         </ul>
       </nav>
     </header>
