added another item to the portfolio

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                 <a href="https://rubygems.org/gems/onlinerbytodd" target="_new"><img src="img/rubygem.PNG" alt=""></a>
                 <p><a href="https://rubygems.org/gems/onlinerbytodd">Onliner by Todd</a>, a Ruby on Rails gem I developed to help track users who are online.</p>
             </li>
+            <li>
+                <a href="http://www.sherriscards.com" target="_new"><img src="img/sherriscards.PNG" alt=""></a>
+                <p><a href="http://www.sherriscards.com">Sherri's Cards</a>, a very simple e-commerce website built in PHP.</p>
+            </li>
           </ul>
         </section>
         <footer>
