updated twitter links

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
         </section>
         <footer>
           <a href="http://www.facebook.com/toddnestor"><img src="img/facebook-wrap.png" alt="Facebook" class="social-icon"></a>
-          <a href="http://www.twitter.com/@toddnestor"><img src="img/twitter-wrap.png" alt="Twitter" class="social-icon"></a>
+          <a href="http://www.twitter.com/_toddnestor"><img src="img/twitter-wrap.png" alt="Twitter" class="social-icon"></a>
           <a href="https://github.com/toddnestor"><img src="img/github.jpg" alt="Github" class="social-icon"></a>
           <a href="http://www.linkedin.com/pub/todd-nestor/3a/574/560"><img src="img/li.jpg" alt="LinkedIn" class="social-icon"></a>
           <p>&copy; Copyright 2014 Todd Nestor.</p>
